tests/baselines/reference/FunctionDeclaration12_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration12_es6.ts(1,20): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration12_es6.ts (1 errors) ====
    var v = function * yield() { }
                       ~~~~~
!!! error TS1003: Identifier expected.